--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
 				Stem Lokaal in het Stemlokaal!
 			</h1>
 			<div id="footer" style="text-align: center;">
+				<a href="http://www.gewoonsamendoen.nu">Copyright &copy; 2013 Burgerbelangen Enschede | Alle Rechten Voorbehouden</a>
 			</div>
 			<div id="kaart" style="width:628px; margin-left:auto; margin-right:auto; margin-top: 130px">
 				<img src="images/stemlokaal-twente.png" style="z-index:1; position:absolute;"/>
