--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 				text-shadow: 2px 2px LightGray;
 			}
 
+			.info,
 			.partij h3 {
 				font-family: "Helvetica_BlkExO"; 
 				font-size: 30px;
@@ -96,6 +97,7 @@
 			<div id="footer" style="text-align: center;">
 				<a href="http://www.gewoonsamendoen.nu">Copyright &copy; 2013 Burgerbelangen Enschede | Alle Rechten Voorbehouden</a>
 			</div>
+			<a href="#info" class="info fancybox" style="position: absolute; z-index: 20; margin-top: 500px; margin-left: 10px;">O<span style="font-size:20px;">ver ons!</span></a>
 			<div id="kaart" style="width:628px; margin-left:auto; margin-right:auto; margin-top: 130px">
 				<img src="images/stemlokaal-twente.png" style="z-index:1; position:absolute;"/>
 				
@@ -155,6 +157,14 @@
 					<img class="gemeente" src="images/stemlokaal-rijssenholten-overlay.png" style="opacity:0.0;"/>
 				</a>
 			</div>
+
+			<div id="info" style="width: 800px; margin-left: auto; margin-right: auto; display: none;">
+				<h3>Informatie over 'Stem Lokaal in het Stemlokaal'</h3>
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam quis mi eu elit tempor facilisis id et neque. Nulla sit amet sem sapien. Vestibulum imperdiet porta ante ac ornare. Nulla et lorem eu nibh adipiscing ultricies nec at lacus. Cras laoreet ultricies sem, at blandit mi eleifend aliquam. Nunc enim ipsum, vehicula non pretium varius, cursus ac tortor. Vivamus fringilla congue laoreet. Quisque ultrices sodales orci, quis rhoncus justo auctor in. Phasellus dui eros, bibendum eu feugiat ornare, faucibus eu mi. Nunc aliquet tempus sem, id aliquam diam varius ac. Maecenas nisl nunc, molestie vitae eleifend vel, iaculis sed magna. Aenean tempus lacus vitae orci posuere porttitor eget non felis. Donec lectus elit, aliquam nec eleifend sit amet, vestibulum sed nunc.
+				</p>
+			</div>
+
 
 			<div id="enschede" class="partij" style="width: 800px; margin-left: auto; margin-right: auto; display: none;">
 				<a href="http://www.gewoonsamendoen.nu" style="text-decoration: none; color: #921171">
