--- a/index.html
+++ b/index.html
@@ -98,6 +98,8 @@
 		
 		<script>
 		$(document).ready(function(){
+			$("#infotekst").hide();
+
 			$(".fancybox").fancybox({
 				beforeShow: function(){
 					$("#infotekst:visible").hide();
