--- a/index.html
+++ b/index.html
@@ -5,28 +5,11 @@
 		
 		<!-- META -->
 		<meta name="author" content="Marc Teutelink"/>
-		<meta name="description" content="Gewoon Samen Doen: Dit is de officiële campagne website van Burgerbelangen Enschede voor de gemeenteraadsverkiezingen van 2014. Hierin presenteren de eerste 11 kandidaten het verkiezingsprogramma aan u voor."/>
-		<meta name="keywords" content="burgerbelangenenschede, burgerbelangen, burger, enschede, gemeenteraadverkiezingen, gemeenteraad, verkiezingen, gewoonsamendoen, lokaal, politiek, stemmen, lijst5"/>
+		<meta name="description" content="Stem lokaal in het stemlokaal: Dit is de officiële campagne website van alle twentse lokale politieke partijen voor de gemeenteraadsverkiezingen van 2014, die zich conformeren aan een 9-tal twentse speerpunten."/>
+		<meta name="keywords" content="lokaal, burgerbelangen, burger, enschede, gemeenteraadverkiezingen, gemeenteraad, verkiezingen, gewoonsamendoen, lokaal, politiek, stemmen, lijst5"/>
 		<link rel="author" href="https://plus.google.com/+MarcTeutelink"/>
 		<link rel="publisher" href="https://plus.google.com/+MarcTeutelink"/>
 
-		<!-- Twitter Card -->
-		<meta name="twitter:card" content="summary">
-		<meta name="twitter:site" content="@burgerbelangen">
-		<meta name="twitter:title" content="Gewoon Samen Doen: Stem Burgerbelangen Enschede!">
-		<meta name="twitter:description" content="Dit is de officiële campagne website van Burgerbelangen Enschede voor de gemeenteraadsverkiezingen van 2014. Hierin presenteren de eerste 11 kandidaten het verkiezingsprogramma aan u voor.">
-		<meta name="twitter:creator" content="@mteutelink">
-		<meta name="twitter:image:src" content="http://gewoonsamendoen.nu/images/Burgerbelangen_Enschede.jpg">
-		<meta name="twitter:domain" content="gewoonsamendoen.nu">
-
-		<!-- Open Graph -->
-		<meta property=”og:title” content=”Gewoon Samen Doen: Stem Burgerbelangen Enschede!”/>
-		<meta property=”og:type” content=”website”/>
-		<meta property=”og:description” content=”Dit is de officiële campagne website van Burgerbelangen Enschede voor de gemeenteraadsverkiezingen van 2014. Hierin presenteren de eerste 11 kandidaten het verkiezingsprogramma aan u voor.“/>
-		<meta property=”og:image” content=”http://gewoonsamendoen.nu/images/Burgerbelangen_Enschede.jpg”/>
-		<meta property=”og:url” content=”http://www.gewoonsamendoen.nu”/>
-		<meta property=”og:site_name” content=”Gewoon Samen Doen: Stem Burgerbelangen Enschede!”/>
-		
 		<!-- Generic -->
 		<link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
 		<link rel="stylesheet" href="font-awesome-4.0.3/css/font-awesome.min.css">
@@ -205,7 +188,7 @@
 				</ol>  
 			</div>
 			<div class="overdezewebsite" id="infotrigger" style="float: left; background-color: gray; width: 50px; height: 100%;">
-				<p id="rotate" class="info" style="position: absolute; z-index: 20; margin-top: 330px; margin-left: -195px; width: 450px;"><span style="font-size:40px;">O</span><span style="font-size:30px;">ver deze website!</span></a>
+				<p id="rotate" class="info" style="position: absolute; z-index: 20; margin-top: 300px; margin-left: -270px; width: 600px;"><span style="font-size:40px;">T</span><span style="font-size:36px;">wentse speerpunten!</span></a>
 			</div>
 		</div>
 
