--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
 		<script type="text/javascript" src="js/jquery.fancybox.js?v=2.1.5"></script>
 		<link rel="stylesheet" type="text/css" href="css/jquery.fancybox.css?v=2.1.5" media="screen" />
 
+		<script type="text/javascript" src="js/cssSandpaper/EventHelpers.js"></script>
+		<script type="text/javascript" src="js/cssSandpaper/cssQuery-p.js"></script>
+		<script type="text/javascript" src="js/cssSandpaper/jcoglan.com/sylvester.js"></script>
+		<script type="text/javascript" src="js/cssSandpaper/cssSandpaper.js"></script>
+
 		<style type="text/css">
 			@font-face {
 				/* Helvetica Condensed Oblique */
@@ -73,8 +78,8 @@
 				-moz-transform: rotate(-90.0deg);  /* FF3.5+ */
 				-o-transform: rotate(-90.0deg);  /* Opera 10.5 */
 				-webkit-transform: rotate(-90.0deg);  /* Saf3.1+, Chrome */
-				filter:  progid:DXImageTransform.Microsoft.BasicImage(rotation=0.083);  /* IE6,IE7 */
-				-ms-filter: "progid:DXImageTransform.Microsoft.BasicImage(rotation=0.083)"; /* IE8 */
+				-ms-transform: rotate(-90.0deg);  /* IE9+ */
+				-sand-transform: rotate(90deg);
 			}
 
 		</style>
