--- a/index.html
+++ b/index.html
@@ -28,12 +28,16 @@
 			@font-face {
 				/* Helvetica Condensed Oblique */
 				font-family: 'Helvetica_BlkExO';
-				src: url('fonts/HelveticaNeueLTStd-BlkExO.otf');
+				src: local("☺"),
+					url("fonts/HelveticaNeueLTStd-BlkExO.woff") format("woff"),
+					url('fonts/HelveticaNeueLTStd-BlkExO.otf') format("opentype");
 			}
 			@font-face {
 				/* Helvetica Condensed Oblique */
 				font-family: 'Helvetica_ExO';
-				src: url('fonts/HelveticaNeueLTStd-ExO.otf');
+				src: local("☺"),
+					url("fonts/HelveticaNeueLTStd-ExO.woff") format("woff"),
+					url('fonts/HelveticaNeueLTStd-ExO.otf') format("opentype");
 			}
 			
 			h1 {
@@ -43,6 +47,7 @@
 				font-size: 60px;
 				text-shadow: 2px 2px LightGray;
 			}
+			
 			.overdezewebsite {
 				font-family: "Helvetica_ExO"; 
 				color: white;
@@ -68,13 +73,18 @@
 			}
 			
 			#footer {
-			   clear: both;
-			   position:absolute;
+			   position:fixed;
 			   bottom:0;
 			   width:100%;
 			   height:50px;
 			   background-color: #494949;
 			}
+			
+			* html #footer {
+				position:absolute;
+				top:expression((0-(footer.offsetHeight)+(document.documentElement.clientHeight ? document.documentElement.clientHeight : document.body.clientHeight)+(ignoreMe = document.documentElement.scrollTop ? document.documentElement.scrollTop : document.body.scrollTop))+'px');
+			}
+
 			#rotate {
 				-moz-transform: rotate(-90.0deg);  /* FF3.5+ */
 				-o-transform: rotate(-90.0deg);  /* Opera 10.5 */
